@@ -5,8 +5,11 @@
 	* lisp/sawfish/wm/menus.jl: make menus-include-shortcuts a defcustom
 	again.
 
-	* lisp/sawfish/wm/util/compat.jl: remove menus-include-shortcuts from
-	compat list to make defcustom work.
+	* lisp/sawfish/wm/util/nokogiri.jl: make customize-show-symbols a
+	defcustom again.
+
+	* lisp/sawfish/wm/util/compat.jl: remove menus-include-shortcuts,
+	customize-show-symbols from compat list to make defcustom work.
 
 	* lisp/sawfish/wm/menus.jl: use resize-window-prompt in
 	window-ops-menu, as resize-window-to-dimensions has been removed more
